--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -1,2 +1,69 @@
 @import "tailwindcss";
 
+/* Custom font faces */
+@font-face {
+    font-family: h1-font;
+    src: url('../../public/fonts/SuperCommando.otf');
+}
+
+@font-face {
+    font-family: body-font;
+    src: url('../../public/fonts/ChakraPetch-Regular.ttf');
+}
+
+@font-face {
+    font-family: h2-font;
+    src: url('../../public/fonts/Cyberverse.otf');
+}
+
+/* Custom global styles */
+:root {
+
+    /* Background Colors */
+    --background-black: #000000;
+    --background-charcoal: #121212;
+    --background-purple: #1B1B2F;
+    /* Primary Colors */
+    --primary-cyan-900: #00FFFF;
+    --primary-cyan-700: #00CCCC;
+    --primary-cyan-500: #009999;
+    --primary-green-900: #00FF00;
+    --primary-green-700: #00CC00;
+    --primary-green-500: #009900;
+    --primary-magenta-900: #FF00FF;
+    --primary-magenta-700: #CC00CC;
+    --primary-magenta-500: #990099;
+    --primary-purple-700: #9400D3;
+    --primary-purple-500: #7100A1;
+    --primary-purple-300: #4A006E;
+    /* Secondary Colors */
+    --secondary-blue-700: #023E8A;
+    --secondary-blue-500: #012757;
+    --secondary-blue-300: #011024;
+    --secondary-dk-blue-500: #0A0F25;
+    --secondary-dk-blue-300: #070A1A;
+    --secondary-dk-blue-100: #01030D;
+    --secondary-magenta-500: #330033;
+    --secondary-magenta-300: #1A001A;
+    --secondary-magenta-100: #0D000D;
+    --secondary-purple-500: #290929;
+    --secondary-purple-300: #1A061A;
+    --secondary-purple-100: #0D030D;
+    /* Gradient Colors */
+    --glitch-gradient: linear-gradient(90deg, #FF00FF 0%, #00FFFF 50%, #FF00FF 100%);
+    --holographic-gradient: linear-gradient(90deg, #00FFFF 0%, #9400D3 100%);
+    --sunset-gradient: linear-gradient(90deg, #FF007F 0%, #FF4500 50%, #FFD700 100%);
+    /* Font Families */
+    --h1-ff: h1-font;
+    --h2-ff: h2-font;
+    --body-ff: body-font;
+    /* Font Sizes */
+    --desktop-h1: 5rem;
+    --desktop-h2: 3rem;
+    --desktop-lg-body: 1.875rem;
+    --desktop-body: 1.125rem;
+    --mobile-h1: 3.5rem;
+    --mobile-h2: 2.25rem;
+    --mobile-lg-body: 1.5rem;
+    --mobile-body: 1rem;
+}
