--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -48,3 +48,57 @@
 }
 
 /* Navbar menu styles for larger screens */
+.nav-list {
+    animation: border-glow 5s linear infinite, cyberpunk-glow 2s infinite alternate;
+    border: 2px solid;
+    border-image-slice: 1;
+    border-image-source: linear-gradient(90deg, var(--color-primary-cyan-900), var(--color-primary-magenta-900), var(--color-primary-cyan-900));
+    box-shadow: 0 4px 15px rgba(0, 255, 255, 0.3);
+}
+
+/* Navbar links */
+.nav-link {
+    position: relative;
+    text-shadow: 0 0 8px rgba(0, 255, 255, 0.8), 0 0 16px rgba(255, 0, 255, 0.8);
+    transition: text-shadow 0.3s ease;
+}
+
+.nav-link:hover {
+    animation: glitch 0.5s linear infinite;
+}
+
+.nav-link::after {
+    background-color: var(--color-primary-magenta-900);
+    bottom: -2px;
+    content: '';
+    filter: blur(0.5px);
+    height: 1px;
+    left: 0;
+    opacity: 1;
+    position: absolute;
+    transition: width 0.2s;
+    width: 0;
+    z-index: 20;
+}
+
+.nav-link:hover::after {
+    width: 102%;
+}
+
+.nav-link::before {
+    background-color: var(--color-primary-magenta-900);
+    content: '';
+    filter: blur(0.5px);
+    height: 0;
+    right: -2px;
+    opacity: 1;
+    position: absolute;
+    top: 0;
+    transition: height 0.2s;
+    width: 1px;
+    z-index: 20;
+}
+
+.nav-link:hover::before {
+    height: 107%;
+}
