--- a/frontend/src/styles/animations.css
+++ b/frontend/src/styles/animations.css
@@ -20,7 +20,7 @@
         box-shadow: 0 0 8px rgba(0, 255, 246, 0.8), 0 0 16px rgba(255, 0, 246, 0.8);
     }
     50% {
-        box-shadow: 0 0 12px rgba(0, 255, 246, 1), 0 0 24px rgba(255, 0, 246, 1);
+        box-shadow: 0 0 18px rgb(16, 116, 91), 0 0 36px rgba(255, 0, 246, 1);
     }
     100% {
         box-shadow: 0 0 8px rgba(0, 255, 246, 0.8), 0 0 16px rgba(255, 0, 246, 0.8);
