--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -1,14 +1,129 @@
+@property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+}
+
+/* Gradient Border Rotate Animation */
+@keyframes rotate-border {
+    to {
+        --angle: 360deg;
+    }
+}
+
 /* Footer container styles */
 footer {
     animation: border-glow 5s linear infinite, cyberpunk-glow 5s infinite alternate;
     border-top: 2px solid;
     border-image-slice: 1;
     border-image-source: linear-gradient(90deg, var(--color-primary-cyan-900), var(--color-primary-magenta-900), var(--color-primary-cyan-900));
+    text-shadow: var(--color-text-shadow);
 }
 
 /* Footer Section Styles */
 .footer-title {
     font-family: var(--font-h2-ff);
+    margin-bottom: 1rem;
     text-align: center;
     transition: text-shadow 0.3s ease;
+}
+
+/* Footer Form Styles */
+.contact-input {
+    background-color: var(--color-charcoal);
+    border: 1px solid var(--color-primary-cyan-900);
+    border-radius: 0 20px;
+    box-shadow: 0 0 8px rgba(0, 255, 255, 0.8);
+    color: var(--color-primary-cyan-900);
+    font-family: var(--font-body-ff);
+    margin: 0.5rem 0;
+    min-width: 280px;
+    padding: 0.5rem;
+    transition: all 0.3s ease;
+}
+
+.contact-input:focus {
+    border: 1px solid var(--color-primary-magenta-900);
+    box-shadow: 0 0 16px rgba(255, 0, 255, 0.8);
+    outline: none;
+}
+
+/* Styles for the social media icons */
+.social-link {
+    filter: drop-shadow(0 0 16px rgba(255, 0, 255, 0.822));
+    transition: all 0.2s ease;
+}
+
+.social-link:hover {
+    color: var(--color-primary-cyan-500);
+    scale: 1.2;
+}
+
+.social-link:active {
+    color: var(--color-primary-cyan-700);
+    scale: 0.9;
+}
+
+.social-icon {
+    filter: drop-shadow(0 0 8px rgba(0, 255, 255, 0.795));
+}
+
+#contact-btn {
+    border-radius: 25px 0;
+    cursor: pointer;
+    opacity: 1;
+    position: relative;
+    text-shadow: var(--color-text-shadow);
+    transition: all 0.3s ease;
+}
+
+#contact-btn:hover {
+    scale: 1.2;
+}
+
+#contact-btn:active {
+    scale: 0.9;
+}
+
+#contact-btn:hover::before {
+    box-shadow: 0 4px 8px 1px rgba(0, 0, 0, 0.815);
+    filter: blur(4px);
+}
+
+#contact-btn::before {
+    animation: rotate-border 3s linear infinite;
+    background-image: linear-gradient(
+        var(--angle), 
+        var(--color-primary-cyan-900), 
+        var(--color-primary-cyan-700),
+        var(--color-primary-magenta-700), 
+        var(--color-primary-magenta-900)
+        );
+    bottom: -2px;
+    border-radius: 25px 0;
+    content: '';
+    filter: blur(2px);
+    height: 110%;
+    left: -3px;
+    position: absolute;
+    transition: all 0.3s ease;
+    width: 108%;
+    z-index: 0;
+}
+
+#contact-btn::after {
+    background-color: var(--color-purple);
+    bottom: 0;
+    border-radius: 25px 0;
+    content: 'Submit';
+    height: 100%;
+    left: 0;
+    padding: 0.4rem;
+    position: absolute;
+    width: 100%;
+    z-index: 0;
+}
+
+#copyright {
+    text-shadow: none;
 }
