--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -14,6 +14,7 @@
 /* Footer container styles */
 footer {
     animation: border-glow 5s linear infinite, cyberpunk-glow 5s infinite alternate;
+    background-image: linear-gradient(120deg, var(--color-charcoal), var(--color-secondary-blue-500), var(--color-charcoal));
     border-top: 2px solid;
     border-image-slice: 1;
     border-image-source: linear-gradient(90deg, var(--color-primary-cyan-900), var(--color-primary-magenta-900), var(--color-primary-cyan-900));
