--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -50,6 +50,7 @@
 /* Navbar menu styles for larger screens */
 .nav-list {
     animation: border-glow 5s linear infinite, cyberpunk-glow 5s infinite alternate;
+    background-image: linear-gradient(10deg, var(--color-secondary-blue-500), var(--color-charcoal) 80%);
     border: 2px solid;
     border-image-slice: 1;
     border-image-source: linear-gradient(90deg, var(--color-primary-cyan-900), var(--color-primary-magenta-900), var(--color-primary-cyan-900));
