--- a/frontend/src/components/coreComponents/Footer.css
+++ b/frontend/src/components/coreComponents/Footer.css
@@ -19,6 +19,7 @@ footer {
     border-image-slice: 1;
     border-image-source: linear-gradient(90deg, var(--color-primary-cyan-900), var(--color-primary-magenta-900), var(--color-primary-cyan-900));
     text-shadow: var(--color-text-shadow);
+    scroll-snap-align: end;
 }
 
 footer section {
@@ -80,12 +81,20 @@ footer section {
 }
 
 #contact-btn {
-    border-radius: 25px 0;
-    cursor: pointer;
-    opacity: 1;
-    position: relative;
-    text-shadow: var(--color-text-shadow);
-    transition: all 0.3s ease;
+    background-image: linear-gradient(
+    120deg,
+    var(--color-charcoal),
+    var(--color-secondary-blue-500),
+    var(--color-charcoal)
+  );
+  border-radius: 25px 0;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  opacity: 1;
+  text-shadow: var(--color-text-shadow);
+  transition: all 0.3s ease;
+  top: 2rem;
+  transform-style: preserve-3d;
 }
 
 #contact-btn:hover {
@@ -98,41 +107,28 @@ footer section {
 
 #contact-btn:hover::before {
     box-shadow: 0 4px 8px 1px rgba(0, 0, 0, 0.815);
-    filter: blur(4px);
+    filter: blur(8px);
 }
 
 #contact-btn::before {
-    animation: rotate-border 3s linear infinite;
-    background-image: linear-gradient(
-        var(--angle), 
-        var(--color-primary-cyan-900), 
-        var(--color-primary-cyan-700),
-        var(--color-primary-magenta-700), 
-        var(--color-primary-magenta-900)
-        );
-    bottom: -2px;
-    border-radius: 25px 0;
-    content: '';
-    filter: blur(2px);
-    height: 110%;
-    left: -3px;
-    position: absolute;
-    transition: all 0.3s ease;
-    width: 108%;
-    z-index: 0;
-}
-
-#contact-btn::after {
-    background-color: var(--color-purple);
-    bottom: 0;
-    border-radius: 25px 0;
-    content: 'SUBMIT';
-    height: 100%;
-    left: 0;
-    padding: 0.4rem;
-    position: absolute;
-    width: 100%;
-    z-index: 0;
+    animation: rotate-border 6s linear infinite;
+  background-image: linear-gradient(
+    var(--angle),
+    var(--color-primary-cyan-900),
+    var(--color-primary-cyan-700),
+    var(--color-primary-magenta-700),
+    var(--color-primary-magenta-900)
+  );
+  bottom: 0px;
+  border-radius: 25px 0;
+  content: '';
+  filter: blur(4px);
+  height: 100%;
+  left: 0px;
+  position: absolute;
+  transition: all 0.3s ease;
+  width: 100%;
+  transform: translateZ(-5px);
 }
 
 #copyright {
