--- a/src/components/coreComponents/Navbar.css
+++ b/src/components/coreComponents/Navbar.css
@@ -49,21 +49,8 @@
 
 /* Navbar menu styles for larger screens */
 .nav-list {
-  animation: border-glow 5s linear infinite,
-    cyberpunk-glow 5s infinite alternate;
-  background-image: linear-gradient(
-    10deg,
-    var(--color-secondary-blue-500),
-    var(--color-charcoal) 80%
-  );
-  border: 2px solid;
-  border-image-slice: 1;
-  border-image-source: linear-gradient(
-    90deg,
-    var(--color-primary-cyan-900),
-    var(--color-primary-magenta-900),
-    var(--color-primary-cyan-900)
-  );
+  animation: cyberpunk-glow 5s infinite alternate;
+  border-radius: 0 0 10px 10px;
   box-shadow: 0 4px 15px rgba(0, 255, 255, 0.3);
 }
 
