--- a/src/components/homeComponents/AboutSection.css
+++ b/src/components/homeComponents/AboutSection.css
@@ -1,13 +1,4 @@
 #about-section {
-    animation: border-glow 5s linear infinite;
-    border-top: 2px solid;
-    border-image-slice: 1;
-    border-image-source: linear-gradient(
-    90deg,
-    var(--color-primary-cyan-900),
-    var(--color-primary-magenta-900),
-    var(--color-primary-cyan-900)
-  );
   scroll-snap-align: start;
 }
 
@@ -33,18 +24,11 @@
     transition: opacity 1s ease, transform 1s ease;
 }
 
-.info-container:nth-child(even) {
-    background-image: linear-gradient(47deg, black, var(--color-secondary-magenta-500), black);
-}
-
-.info-container:nth-child(odd) {
-    background-image: linear-gradient(7deg, black, var(--color-secondary-magenta-300), black);
-}
-
 .info-container {
     border-radius: 20px;
     display: flex;
     flex-direction: column;
+    gap: 1rem;
     align-items: center;
     position: relative;
     padding: 1rem 2rem;
@@ -55,24 +39,6 @@
     transform: scaleX(1);
 }
 
-.info-container::after {
-    animation: rotate-border 8s linear infinite, skills-glow 5s infinite;
-    content: '';
-    border-radius: 12px;
-    filter: blur(18px);
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(
-      var(--angle),
-      var(--color-primary-cyan-500),
-      var(--color-primary-magenta-500)
-    );
-    opacity: 0.8;
-    z-index: -1;
-}
 
 .info-title {
     color: black;
