--- a/src/components/homeComponents/SkillsSection.css
+++ b/src/components/homeComponents/SkillsSection.css
@@ -1,13 +1,4 @@
 #skills-section {
-  animation: border-glow 5s linear infinite;
-    border-top: 2px solid;
-  border-image-slice: 1;
-  border-image-source: linear-gradient(
-    90deg,
-    var(--color-primary-cyan-900),
-    var(--color-primary-magenta-900),
-    var(--color-primary-cyan-900)
-  );
   scroll-snap-align: start;
 }
 
@@ -51,17 +42,17 @@
 }
 
 .secondary-container {
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     90deg,
     var(--color-charcoal),
     var(--color-secondary-blue-500),
     var(--color-charcoal)
-  );
+  ); */
   border-radius: 10px;
   position: relative;
 }
 
-.secondary-container::after {
+/* .secondary-container::after {
   animation: rotate-border 8s linear infinite, skills-glow 5s infinite;
   content: '';
   border-radius: 12px;
@@ -78,7 +69,7 @@
   );
   opacity: 0.8;
   z-index: -1;
-}
+} */
 
 .container-title {
   color: black;
