--- a/src/components/homeComponents/AboutSection.css
+++ b/src/components/homeComponents/AboutSection.css
@@ -8,7 +8,7 @@
 }
 
 #information-grid {
-    align-items: center;
+    align-items: start;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
