Major update to projects section - including new project modal

--- a/src/components/projectsComponents/ProjectCard.css
+++ b/src/components/projectsComponents/ProjectCard.css
@@ -49,6 +49,10 @@
   transform: scaleX(1);
 }
 
+.glow-text {
+  text-shadow: 0 0 5px currentColor;
+}
+
 .image-container {
   border-radius: 20px 20px 0 0;
 }
